--- a/Client/Dt.App/Dt.App.csproj
+++ b/Client/Dt.App/Dt.App.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Version>2.0.0</Version>
+        <PackageId>Dt.Client</PackageId>
 		<Description>搬运工客户端基础包</Description>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
