--- a/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
+++ b/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
@@ -1,16 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net6.0-android;net6.0-ios</TargetFrameworks>
+        <TargetFramework>net6.0-ios</TargetFramework>
         <SingleProject>true</SingleProject>
         <OutputType>Exe</OutputType>
-        <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-ios'">iossimulator-x64</RuntimeIdentifier>
+        <RuntimeIdentifier>iossimulator-x64</RuntimeIdentifier>
         <UseInterpreter Condition="'$(Configuration)' == 'Debug'">True</UseInterpreter>
         <IsUnoHead>true</IsUnoHead>
     </PropertyGroup>
 
     <Import Project="..\Common.props" />
     <Import Project="..\Stable.props" />
-    
+
     <ItemGroup>
         <ProjectReference Include="..\Dt.App\Dt.App.csproj" />
         <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
@@ -19,13 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Android\Assets\Fonts\" />
-      <Folder Include="iOS\Resources\Fonts\" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <AndroidAsset Include="..\..\Common\Fonts\icon.ttf" Link="Android\Assets\Fonts\icon.ttf" />
-      <AndroidAsset Include="..\..\Common\Fonts\uno-fluentui-assets.ttf" Link="Android\Assets\Fonts\uno-fluentui-assets.ttf" />
+        <Folder Include="iOS\Resources\Fonts\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -36,5 +30,4 @@
             <CopyToOutputDirectory>Never</CopyToOutputDirectory>
         </None>
     </ItemGroup>
-
 </Project>
