--- a/.gitignore
+++ b/.gitignore
@@ -353,7 +353,8 @@ Service/src/Dt.Cm/etc/log/
 Service/src/Dt.Cm/etc/model/
 Service/src/Dt.Msg/etc/log/
 Service/src/Dt.Fsm/etc/log/
-!Service/iis/tls.pfx
+!Service/iis/tls.pfx 
+Common/wasm/
 !Client/Dt.App/Publish/
 UWP/Common/wasm/
 !UWP/Dt.App/Publish/
