打包时复制子目录

--- a/Client-Stable/Dt.Cells/Dt.Cells.csproj
+++ b/Client-Stable/Dt.Cells/Dt.Cells.csproj
@@ -6,7 +6,7 @@
 	</PropertyGroup>
 
     <Import Project="..\Stable.props" />
-    <Import Project="..\Package.props" />
+    <Import Project="..\..\Client\Package.props" />
 
 	<!-- 包图标 -->
 	<ItemGroup>
