--- a/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
+++ b/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
@@ -18,6 +18,13 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Page Include="..\Dt.Sample\App\App.xaml" Link="App.xaml" />
+        <Compile Include="..\Dt.Sample\App\App.xaml.cs" Link="App.xaml.cs">
+            <DependentUpon>App.xaml</DependentUpon>
+        </Compile>
+    </ItemGroup>
+    
+    <ItemGroup>
         <Folder Include="iOS\Resources\Fonts\" />
     </ItemGroup>
 
