--- a/Client/Common.props
+++ b/Client/Common.props
@@ -45,6 +45,7 @@
         <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.3" />
         <!-- 因WorkManager后台任务添加的引用 -->
         <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.6.0.2" />
+        <!-- 升级.net6后需要引用 -->
         <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.0.4" />
     </ItemGroup>
 
