--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -17,6 +17,11 @@
     </ItemGroup>
 
     <ItemGroup>
+        <AndroidAsset Include="..\..\Common\Fonts\icon.ttf" Link="Android\Assets\Fonts\icon.ttf" />
+        <AndroidAsset Include="..\..\Common\Fonts\uno-fluentui-assets.ttf" Link="Android\Assets\Fonts\uno-fluentui-assets.ttf" />
+    </ItemGroup>
+    
+    <ItemGroup>
         <Page Include="..\Dt.Sample\App\App.xaml" Link="App.xaml" />
         <Compile Include="..\Dt.Sample\App\App.xaml.cs" Link="App.xaml.cs">
             <DependentUpon>App.xaml</DependentUpon>
