--- a/Client/Dt.Shell.IOS/iOS/Info.plist
+++ b/Client/Dt.Shell.IOS/iOS/Info.plist
@@ -1,57 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-  <dict>
-	<key>CFBundleDisplayName</key>
-	<string>UnoApp</string>
+<dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.UnoApp</string>
+	<string>com.dt.samples</string>
+	<key>CFBundleDisplayName</key>
+	<string>搬运工</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>MinimumOSVersion</key>
-	<string>10.0</string>
 	<key>UIDeviceFamily</key>
 	<array>
-	  <integer>1</integer>
-	  <integer>2</integer>
+		<integer>1</integer>
 	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
-	  <string>armv7</string>
-	  <string>arm64</string>
+		<string>arm64</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
-	  <string>UIInterfaceOrientationPortrait</string>
-	  <string>UIInterfaceOrientationLandscapeLeft</string>
-	  <string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
-	  <string>UIInterfaceOrientationPortrait</string>
-	  <string>UIInterfaceOrientationPortraitUpsideDown</string>
-	  <string>UIInterfaceOrientationLandscapeLeft</string>
-	  <string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Picture Picker uses photo library</string>
 	<key>UIAppFonts</key>
 	<array>
-	  <string>Fonts/uno-fluentui-assets.ttf</string>
+		<string>Fonts/icon.ttf</string>
+		<string>Fonts/uno-fluentui-assets.ttf</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UILaunchImageMinimumOSVersion</key>
-	<string>9.0</string>
-	<key>UILaunchImageOrientation</key>
-	<string>Portrait</string>
-	<key>UILaunchImageSize</key>
-	<string>{320, 568}</string>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIcons.appiconset</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
-  </dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请求使用麦克风进行录音</string>
+	<key>NSCameraUsageDescription</key>
+	<string>请求使用摄像头进行拍照</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>China</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+      <key>CFBundleTypeName</key>
+      <string>public.data</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.data</string>
+				<string>public.content</string>
+			</array>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+		</dict>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
+</dict>
 </plist>
