--- a/Tools/DtTemplates/PrjTemplate/Lib/Lib.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Lib/Lib.csproj
@@ -1,8 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-windows10.0.19041;net6.0-android;net6.0-ios</TargetFrameworks>
-		<AssemblyName>Dt.Lib</AssemblyName>
-		<RootNamespace>Dt.Lib</RootNamespace>
 	</PropertyGroup>
 
 	<Import Project="Common.props" />
