调整fsm静态文件的虚拟路径为drv，避免和其他服务冲突

--- a/Service/src/Dt.Service/Dt.Service.targets
+++ b/Service/src/Dt.Service/Dt.Service.targets
@@ -1,5 +1,6 @@
 <Project DefaultTargets="Build">
 	<ItemGroup>
+		<!-- build时将tools下的文件copy到输出目录 -->
 		<Content Include="$(MSBuildThisFileDirectory)..\tools\**">
 			<Visible>false</Visible>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
