--- a/Service/src/Dt.Service/Dt.Service.csproj
+++ b/Service/src/Dt.Service/Dt.Service.csproj
@@ -16,28 +16,19 @@
 		<PackageTags>搬运工 Service</PackageTags>
 	</PropertyGroup>
 
-	<!-- 包图标 -->
+	<!-- 包内容 -->
 	<ItemGroup>
 		<None Include="..\..\..\logo.png">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
-	</ItemGroup>
-	
-	<ItemGroup>
-		<!--PrivateAssets避免引用项目的 nuget 包-->
-		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" PrivateAssets="all" />
-		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" PrivateAssets="all" />
-		<ProjectReference Include="..\Dt.Fsm\Dt.Fsm.csproj" PrivateAssets="all" />
-		<ProjectReference Include="..\Dt.Msg\Dt.Msg.csproj" PrivateAssets="all" />
-	</ItemGroup>
-	
-	<ItemGroup>
+		<!-- 将fsm的初始文件打包到tools下的对应目录 -->
 		<Content Include="..\Dt.Fsm\drive\**">
 			<Pack>True</Pack>
 			<Visible>false</Visible>
-			<PackagePath>\tools</PackagePath>
+			<PackagePath>\tools\drive</PackagePath>
 		</Content>
+		<!-- build时将tools下的文件copy到输出目录 -->
 		<Content Include="Dt.Service.targets">
 			<Pack>True</Pack>
 			<PackagePath>\build</PackagePath>
@@ -46,8 +37,35 @@
 
 	<Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
 		<ItemGroup>
-			<!-- 将本项目输出目录的所有内容打包 -->
-            <TfmSpecificPackageFile Include="$(OutputPath)*.*" Exclude="$(OutputPath)Dt.Service.*" PackagePath="lib\$(TargetFramework)" />
+			<!-- 将本项目输出目录的所有内容打包，不包括子目录 -->
+			<TfmSpecificPackageFile Include="$(OutputPath)*.*" Exclude="$(OutputPath)Dt.Service.*" PackagePath="lib\$(TargetFramework)" />
 		</ItemGroup>
 	</Target>
+	
+	<ItemGroup>
+		<!--PrivateAssets避免引用项目的 nuget 包-->
+		<ProjectReference Include="..\Dt.Cm\Dt.Cm.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Dt.Fsm\Dt.Fsm.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Dt.Msg\Dt.Msg.csproj" PrivateAssets="all" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<!-- 和Dt.Core引用包一致 -->
+		<PackageReference Include="Autofac" Version="6.3.0" />
+		<PackageReference Include="Castle.Core" Version="4.4.1" />
+		<PackageReference Include="Dapper" Version="2.0.123" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.12" />
+		<PackageReference Include="MySqlConnector" Version="2.0.0" />
+		<PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
+		<PackageReference Include="Polly" Version="7.2.2" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+		<PackageReference Include="Serilog" Version="2.10.0" />
+		<PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+		<PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+		<PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+		<PackageReference Include="StackExchange.Redis" Version="2.2.79" />
+	</ItemGroup>
 </Project>
