--- a/Client/Dt.Sample/Dt.Sample.csproj
+++ b/Client/Dt.Sample/Dt.Sample.csproj
@@ -5,9 +5,9 @@
 
     <Import Project="..\Targets.props" />
     <Import Project="..\Common.props" />
+    <Import Project="..\Agent.props" />
     
 	<ItemGroup>
-		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
 		<ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
 		<ProjectReference Include="..\Dt.App\Dt.App.csproj" />
 	</ItemGroup>
