--- a/Service/src/Msg/web.config
+++ b/Service/src/Msg/web.config
@@ -5,7 +5,11 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="bin\Debug\net6.0\Msg.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess" />
+      <aspNetCore processPath="bin\Debug\net6.0\Msg.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
+        <environmentVariables>
+          <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="443" />
+        </environmentVariables>
+      </aspNetCore>
     </system.webServer>
   </location>
 </configuration>
