--- a/Service/src/Agent.props
+++ b/Service/src/Agent.props
@@ -1,6 +1,8 @@
 <Project ToolsVersion="Current">
 	<PropertyGroup>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<NoWarn>1591</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
