--- a/Service/src/Cm/Cm.csproj
+++ b/Service/src/Cm/Cm.csproj
@@ -11,4 +11,10 @@
 		</Content>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Include="..\..\iis\tls.pfx" Link="etc\config\tls.pfx">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
