单副本更新模型库文件

--- a/Tools/DtTemplates/PrjTemplate/Svc/Properties/launchSettings.json
+++ b/Tools/DtTemplates/PrjTemplate/Svc/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:2022;http://localhost:5048",
+      "applicationUrl": "https://localhost:2022",
       "dotnetRunMessages": true
     },
     "IIS Express": {
