完成VS扩展的Svc项目

--- a/Tools/DtTemplates/PrjTemplate/Svc/Properties/launchSettings.json
+++ b/Tools/DtTemplates/PrjTemplate/Svc/Properties/launchSettings.json
@@ -4,24 +4,24 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:11518",
-      "sslPort": 40000
+      "sslPort": 44316
     }
   },
   "profiles": {
-    "PrjName2.Svc": {
+    "$safeprojectname$": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:2022/.admin",
+      "launchUrl": ".admin",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:2022",
+      "applicationUrl": "https://localhost:1234",
       "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:40000/.admin",
+      "launchUrl": ".admin",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
