--- a/Tools/DtTemplates/PrjTemplate/Droid/Android/AndroidManifest.xml
+++ b/Tools/DtTemplates/PrjTemplate/Droid/Android/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           android:versionCode="2"
           android:versionName="1.2"
-          package="com.$ext_safeprojectname$"
+          package="com.dt.$ext_safeprojectname$"
           android:installLocation="auto">
   <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
